[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
select = "0.5.0"
regex = "1.5.4"
rand = "0.8.5"
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4" 
futures = "0.3.21"
sha2 = "0.10.2"